# vollseg-napari-skan

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/vollseg_napari_skan/: napari.yaml
src/vollseg_napari_skan/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
